# aoc

./: .git-branches.toml  .gitignore  Cargo.toml  bb.edn
clojure/: bb.edn
clojure/y2024/: d01.bb  d02.bb  d03.bb  d04.bb
clojure/y2025/: README.md  d01.bb  d02.bb  d05.bb  d06.bb  d07.bb  d08.bb  d09.bb  d11.bb  d12.bb
python/: README.md  bb.edn  hyperfine.2023.md  requirements.in  requirements.txt
python/2022/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  README.md
python/2023/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  README.md
python/2024/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  README.md
python/2025/: 1.py  (+13 more)
rust/: Cargo.toml  README.md
rust/benches/: bench_report.py  hyperfine.2023.md  y2022.md  y2022.rs  y2023.md  y2023.rs
rust/src/: lib.rs  mod.rs
rust/src/y2022/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  main.rs  template.rs
rust/src/y2023/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  main.rs  mod.rs  template.rs
(+1 files in other folders)
