[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
# bumpalo = { version = "3.14.0", features = ["collections", "boxed"] }
# concat-idents = "1.1.4"
criterion = { version = "0.5.1", features = ["html_reports"] }
fnv = "1.0.7"
hashbrown = "0.14.3"
itertools = "0.10.5"
memoize = "0.3.3"
num-integer = "0.1.45"
rayon = "1.8.0"
rustc-hash = "1.1.0"
sscanf="0.4.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
#pprof = { version = "0.11.1", features = ["flamegraph", "criterion", "protobuf-codec"] }

[[bench]]
name = "y2022"
harness = false

[[bin]]
name = "y2022"
path = "src/y2022/main.rs"

[[bench]]
name = "y2023"
harness = false

[[bin]]
name = "y2023"
path = "src/y2023/main.rs"
